# arxiv-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: npm-publish.yml
skills/arxiv-cli/: README.md  SKILL.md
skills/arxiv-cli/agents/: openai.yaml
skills/arxiv-cli/references/: config-and-path.md  download.md  latest.md  library.md  output.md  search.md  show.md  workflows.md
src/: arxiv_api.rs  cli.rs  config.rs  downloader.rs  lib.rs  library.rs  main.rs  models.rs  output.rs
tests/: cli.rs
