[package]
name = "arxiv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
comfy-table = "7.2.1"
directories = "6.0.0"
flate2 = "1.1.5"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["charset", "http2", "macos-system-configuration", "rustls-tls", "stream"] }
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.44"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
urlencoding = "2.1.3"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"
wiremock = "0.6.5"
